v0.11.0 (2017-09-02)
- Feature: add temporary action to reset all movie set IDs
- Fix: only report Beef + Kodi version once per file per version pair

v0.11.0~beta3 (2017-08-29)
- Fix: Kodi library rebuild handling

v0.11.0~beta2 (2017-08-28)
- Feature: generate a report of all changed artwork
- Feature: add option to prefer posters without a title
- Fix: reset items' processed status when the Kodi library is rebuilt

v0.11.0~beta1 (2017-08-22)
- Feature: use HTTPS for all API and image URLs
- Feature: add option to generate thumbnail from video files
- Feature: add option to override image language (defaults to Kodi interface language)
- Feature: add option to remove all artwork for specific types of media
- Fix: a few Leia compatibility changes

v0.10.2 (2017-07-25)
- Feature: don't repeatedly request artwork from an unavailable web service
- Fix: don't remove animated artwork set by other add-ons
- Fix: always allow movie sets to be re-matched from TMDB

v0.10.1 (2017-05-12)
- Fix removing auto-created thumbnails
- Don't crash on ConnectionError with web providers, but warn
- Fix error when removing specific or all not-configured artwork from all seasons
- Fix error with unicode characters from NFO file
- Convert JSON results from providers to UTF-8 encoded bytestrings `str`

v0.10.0 (2017-04-21)
- Automatically find new artwork for old items only once per day
  - Plus option to disable automatic updates for old items altogether
- Remove movie thumbnail Kodi automatically creates if your scraper is not configured to add a poster
- Remove explicit action "clean URLs", this happens automatically as items are processed
- Add manual action to remove all artwork of a specific type

v0.9.1 (2017-02-11)
- Fix setting season artwork

v0.9.0 (2017-01-27)
- Support movie set artwork
- Merge context items into main add-on
- Rearrange libs, drop last dependency not available in official Kodi repo