@@ -1,6 +1,7 @@
 v0.11.0 (2017-09-02)
 - Feature: add temporary action to reset all movie set IDs
-- Fix: only report Beef + Kodi version once per file per version pair
+- Cleanup: rearrange some Advanced add-on settings
+- Cleanup: only report Beef + Kodi version once per file per version pair
 
 v0.11.0~beta3 (2017-08-29)
 - Fix: Kodi library rebuild handling
